--- a/print.html
+++ b/print.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化(WIP)</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器(WIP)</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="solver/solving_strategy.html"><strong aria-hidden="true">3.2.</strong> 搜索策略(WIP)</a></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.3.</strong> 启发式函数(WIP)</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">4.</strong> 资源(WIP)</a></li><li class="chapter-item expanded "><a href="glossary_of_terms.html"><strong aria-hidden="true">5.</strong> 术语表(WIP)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化 (WIP)</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器(WIP)</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="solver/solving_strategy.html"><strong aria-hidden="true">3.2.</strong> 搜索策略 (WIP)</a></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.3.</strong> 启发式函数 (WIP)</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">4.</strong> 资源 (WIP)</a></li><li class="chapter-item expanded "><a href="glossary_of_terms.html"><strong aria-hidden="true">5.</strong> 术语表 (WIP)</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -526,6 +526,14 @@ pub struct Level {
 <li>多个关卡之间的分割.</li>
 <li>单个关卡的解析.</li>
 </ol>
+<pre><code class="language-mermaid">flowchart LR
+    A[包含多个关卡的字符串] --&gt;|Level::to_group| B
+    B[包含单个关卡的字符串] --&gt; C{是否经过\n RLE 压缩?}
+    C --&gt;|是| D[RLE 压缩字符串]
+    C --&gt;|否| E
+    D --&gt;|rle_decode| E
+    E[非 RLE 压缩字符串]
+</code></pre>
 <h3 id="多个关卡之间的分割"><a class="header" href="#多个关卡之间的分割">多个关卡之间的分割</a></h3>
 <p>定义关联函数 <code>to_groups</code>, 接受包含多个关卡的字符串, 返回包含单个关卡的字符串切片的迭代器.</p>
 <pre><code class="language-rs">impl Level {
@@ -1085,7 +1093,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 }
 </code></pre>
 <hr />
-<p>状态是图里的节点, 从初始状态开始探索其相邻的节点, 即邻域<sup class="footnote-reference"><a href="#8">8</a></sup>.</p>
+<p>从初始状态开始探索其相邻的节点, 即邻域<sup class="footnote-reference"><a href="#8">8</a></sup>.</p>
 <p>通过下面函数来生成当前状态的派生状态, 即相邻的状态:</p>
 <pre><code class="language-rs">impl State {
     pub fn successors(&amp;self, solver: &amp;Solver) -&gt; Vec&lt;State&gt; {
@@ -1093,7 +1101,6 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
     }
 }
 </code></pre>
-<p>通过启发式算法优先探索最接近目标状态的节点.</p>
 <p>TODO</p>
 <hr />
 <p>记录已探索过的节点.</p>
