--- a/solver/optimization.html
+++ b/solver/optimization.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Book generated using mdBook -->
     <meta charset="UTF-8">
-    <title>标准化 🚧 - 推箱子教程</title>
+    <title>优化 - 推箱子教程</title>
 
 
     <!-- Custom HTML head -->
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html" class="active"><strong aria-hidden="true">1.3.</strong> 标准化 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器 🚧</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../solver/solving_strategy.html"><strong aria-hidden="true">3.1.</strong> 搜索策略 🚧</a></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数 🚧</a></li><li class="chapter-item expanded "><a href="../solver/optimization.html"><strong aria-hidden="true">3.3.</strong> 优化</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 割点</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 隧道</div></li><li class="chapter-item expanded "><a href="../solver/deadlock.html"><strong aria-hidden="true">3.3.3.</strong> 死锁 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 双向搜索</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> 优化器</div></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">5.</strong> 资源 🚧</a></li><li class="chapter-item expanded "><a href="../glossary_of_terms.html"><strong aria-hidden="true">6.</strong> 术语表 🚧</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器 🚧</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../solver/solving_strategy.html"><strong aria-hidden="true">3.1.</strong> 搜索策略 🚧</a></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数 🚧</a></li><li class="chapter-item expanded "><a href="../solver/optimization.html" class="active"><strong aria-hidden="true">3.3.</strong> 优化</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 割点</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 隧道</div></li><li class="chapter-item expanded "><a href="../solver/deadlock.html"><strong aria-hidden="true">3.3.3.</strong> 死锁 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 双向搜索</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> 优化器</div></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">5.</strong> 资源 🚧</a></li><li class="chapter-item expanded "><a href="../glossary_of_terms.html"><strong aria-hidden="true">6.</strong> 术语表 🚧</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -186,77 +186,16 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
-<h1 id="标准化"><a class="header" href="#标准化">标准化</a></h1>
-<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 这些装饰性的元素在本质上并<strong>不影响关卡的解法</strong>.<br />
-标准化的目的是移除这些与求解<strong>无关或冗余</strong>的元素.</p>
-<p>理想状态下, 任何具有相同步数最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E9%80%A0%E5%85%B3%E5%8D%A1">从解决方案构造关卡</a>来得到标准化后的关卡.<br />
-但对于 NP 难<sup class="footnote-reference"><a href="#1">1</a></sup>的推箱子问题来说, 自动求解最优解决方案通常是耗时且困难的, 因此还需要一种不依赖于关卡解决方案的高效(多项式时间内得出结果)标准化方法. 尽管该方法得到的标准化结果并不完美.</p>
-<p>关卡的标准化可以分为以下几个步骤:</p>
-<ol>
-<li>
-<p>将不可移动的箱子变为墙.</p>
-<p>箱子可能默认就处于死锁状态, 可以当作墙体处理.</p>
-</li>
-<li>
-<p>将无需使用的地板变为墙.</p>
-<p>如果一个地板被三面墙包围, 属于死胡同, 可以当作墙体处理.</p>
-</li>
-<li>
-<p>移除无法到达的墙.</p>
-<p>部分墙无法与玩家产生交互, 因此移除这部分墙不影响关卡的解决方案.</p>
-</li>
-<li>
-<p>统一外墙形式.</p>
-<p>外墙有不同的包围类型, 如:</p>
-<pre><code class="language-txt"> ###
-#@$.#
- ###
-
-#####
-#@$.#
-#####
-</code></pre>
-<p>应该统一为其中一种类型, 通常使用下面的类型.</p>
-</li>
-<li>
-<p>移除无法到达的箱子.</p>
-<p>部分箱子无法与玩家产生交互, 因此移除这部分箱子不影响关卡的解决方案.</p>
-</li>
-<li>
-<p>收紧地图尺寸.</p>
-<p>地图中的元素被删除可能导致地图尺寸缩小.</p>
-</li>
-<li>
-<p>对旋转和翻转标准化.</p>
-<p>将经过不同旋转和翻转的关卡标准化为同一个关卡.
-一个简单的方法是计算不同旋转和翻转后地图的哈希值，选择哈希值最小的版本.</p>
-</li>
-<li>
-<p>玩家初始位置标准化. <strong>(注意: 可能移动玩家位置, 进而改变关卡的解决方案)</strong></p>
-<p>需要对先对玩家的位置进行标准化. 因为即使玩家位置不一样, 但都在同一个区域也可以转变为同一个关卡.
-一个简单的玩家位置标准化方法是将玩家的位置设为玩家可达区域的位置中 Y 坐标最小, 其次 X 坐标最小的位置.</p>
-</li>
-</ol>
-<h2 id="激进的标准化"><a class="header" href="#激进的标准化">激进的标准化</a></h2>
-<p>激进的标准化可能改变关卡的解. 以最简单的关卡为例:</p>
-<pre><code class="language-txt">#####
-#@$.#
-#####
-</code></pre>
-<p>因为玩家开始的位置三面有墙, 位于死胡同, 只能向右移动. 得到结果:</p>
-<pre><code class="language-txt">#####
-# @*#
-#####
-</code></pre>
-<p>玩家左侧死胡同属于无用的区域, 使用墙体填充. 玩家右侧位于目标上的箱子处于死锁状态, 属于无用的箱子和目标, 使用墙体填充. 最后移除多余的墙体得到激进的标准化结果:</p>
-<pre><code class="language-txt">###
-#@#
-###
-</code></pre>
-<p>这是一个最简单的非标准关卡, 因为其没有箱子和目标, 解为空.</p>
-<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p><a href="https://www.sciencedirect.com/science/article/pii/S0925772199000176">https://www.sciencedirect.com/science/article/pii/S0925772199000176</a></p>
-</div>
+<h1 id="优化"><a class="header" href="#优化">优化</a></h1>
+<p>在计算复杂性理论中, 推箱子属于 PSPACE-complete 问题, 是 PSPACE 中最难的一类问题. 地图尺寸和箱子数量没有限制.</p>
+<p>因此只靠暴力搜索只能解决非常简单(地图尺寸小, 箱子数量少)的关卡, 如果希望解决更复杂的关卡则需要进行优化.</p>
+<p>本文所描述的求解器将使用以下优化手段:</p>
+<ul>
+<li>启发式搜索(Heuristic search): 使用启发式搜索算法, 如 A*.</li>
+<li>剪枝(Pruning): 利用<a href="deadlock.html">死锁</a>检测进行剪枝.</li>
+<li>记忆化搜索(Memoization): 防止重复搜索相同节点, 或陷入图里的环.</li>
+<li>预处理(Preprocessing): 预计算下界.</li>
+</ul>
 
 
                         <!-- Giscus -->
@@ -265,12 +204,12 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                        <a rel="prev" href="../level/construction.html" class="mobile-nav-chapters previous"
+                        <a rel="prev" href="../solver/heuristic_function.html" class="mobile-nav-chapters previous"
                             title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                             <i class="fa fa-angle-left"></i>
                         </a>
 
-                        <a rel="next prefetch" href="../solver/index.html" class="mobile-nav-chapters next"
+                        <a rel="next prefetch" href="../solver/deadlock.html" class="mobile-nav-chapters next"
                             title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                             <i class="fa fa-angle-right"></i>
                         </a>
@@ -281,12 +220,12 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                <a rel="prev" href="../level/construction.html" class="nav-chapters previous" title="Previous chapter"
+                <a rel="prev" href="../solver/heuristic_function.html" class="nav-chapters previous" title="Previous chapter"
                     aria-label="Previous chapter" aria-keyshortcuts="Left">
                     <i class="fa fa-angle-left"></i>
                 </a>
 
-                <a rel="next prefetch" href="../solver/index.html" class="nav-chapters next" title="Next chapter"
+                <a rel="next prefetch" href="../solver/deadlock.html" class="nav-chapters next" title="Next chapter"
                     aria-label="Next chapter" aria-keyshortcuts="Right">
                     <i class="fa fa-angle-right"></i>
                 </a>
